--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mood Selector</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>How are you feeling today? 🧠</h1>
   <div id="emoji-container"></div>
   <div id="description-container"></div>
-  
+
 
   <script src="./main.js"></script>
 </body>
