Add a bounce func and dark-mode

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button id="darkModeToggle">🌙</button>
+
   <h1>How are you feeling today? 🧠</h1>
   <div id="emoji-container"></div>
   <div id="description-container"></div>
